cmake_minimum_required(VERSION 3.10)
project(raylib_sample C)

set(CMAKE_C_STANDARD 99)

find_package(raylib REQUIRED)

add_executable(sample sample.c)

target_link_libraries(sample PRIVATE raylib)

# Optionally, include directories if needed
# target_include_directories(sample PRIVATE ${raylib_INCLUDE_DIRS})